# esp32-idf-sqlite3

./: CMakeLists.txt  README.rst  config_ext.h  esp32.c
private_include/: assert.h
